test/integration/bad/laplace_marginal/stanc.expected
  $ ../../../../../install/default/bin/stanc missing_args1.stan
Semantic error in 'missing_args1.stan', line 2, column 12 to column 30:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal'.
The valid signature of this function is
laplace_marginal((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...))
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args2.stan
Semantic error in 'missing_args2.stan', line 2, column 12 to column 34:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol'.
The valid signature of this function is
laplace_marginal_tol((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...), data real, data int, data int, data int,
  data int)
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args3.stan
Semantic error in 'missing_args3.stan', line 2, column 12 to column 58:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_neg_binomial_2_log_lpmf();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_neg_binomial_2_log_lpmf' for the likelihood:
Expected 3 arguments but got 0 arguments.
Expected the arguments to start with:
(array[] int, array[] int, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args4.stan
Semantic error in 'missing_args4.stan', line 42, column 12 to line 43, column 42:
   -------------------------------------------------
    40:    eta ~ normal(0, 1);
    41:  
    42:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                     ^
    43:                                    theta_0);
    44:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal'.
The valid signature of this function is
laplace_marginal((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...))
However, we recieved the types:
((vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int), data vector)
Typechecking failed after checking the first two arguments. Please ensure you
are passing enough arguments and that the fourth is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args5.stan
Semantic error in 'missing_args5.stan', line 65, column 24 to column 46:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:    vector[n_obs] theta = laplace_marginal_rng();
                                 ^
    66:  
    67:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_rng'.
The valid signature of this function is
laplace_marginal_rng((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...), tuple(T2...))
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args6.stan
Semantic error in 'missing_args6.stan', line 65, column 22 to line 66, column 14:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:  vector[n_obs] theta = laplace_marginal_rng(ll_function, (eta, log_ye, y),
                               ^
    66:        theta_0);
    67:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_rng'.
The valid signature of this function is
laplace_marginal_rng((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...), tuple(T2...))
However, we recieved the types:
(data (vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int), data vector)
Typechecking failed after checking the first two arguments. Please ensure you
are passing enough arguments and that the fourth is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args7.stan
Semantic error in 'missing_args7.stan', line 65, column 24 to line 66, column 30:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:    vector[n_obs] theta = laplace_marginal_neg_binomial_2_log_rng(y, {1}, [1.0]',
                                 ^
    66:                        theta_0);
    67:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_neg_binomial_2_log_rng'.
The valid signature of this function is
laplace_marginal_neg_binomial_2_log_rng(array[] int, array[] int, vector,
  vector, (...) => matrix, tuple(...), tuple(...))
However, we recieved the types:
(data array[] int, data array[] int, data vector, data vector)
Typechecking failed after checking the first 3 arguments.
Please ensure you are passing enough arguments and that the 5th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args8.stan
Semantic error in 'missing_args8.stan', line 2, column 12 to column 59:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_poisson_log_lpmf({1}, {1});
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_poisson_log_lpmf'.
The valid signature of this function is
laplace_marginal_tol_poisson_log_lpmf(array[] int, array[] int, vector,
  (...) => matrix, tuple(...), data real, data int, data int, data int, data
  int)
However, we recieved the types:
(data array[] int, data array[] int)
Typechecking failed after checking the first 2 arguments.
Please ensure you are passing enough arguments and that the 4th is a function.
[exit 1]
